--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-requirements.txt
+global-requirements.txt
 diabetes_prediction_dataset.csv
 .venv/
 kaggle.json
 Diabetes_Prediction.ipynb
 fase-1/
+.gitignore
